test/error/iface/err3.rzy
component
  Sub
    signal funcA();
    signal funcB();
      
  implementation elementary
  end

  Err3
    signal funcA();

  implementation composition
    
    component
      a : Sub;
      
    connection
      a.funcA -> funcA;

  end

